--- a/index.html
+++ b/index.html
@@ -4,11 +4,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="./css/style.css" />
     <title>Sign</title>
 </head>
 <body>
+
+<div class="main">
+    <div class="container">
+        <div id="word"><ul></ul></div>
+        <div id="slogan"><p></p></div>
+        <div id="contact">
+            <ul></ul>
+        </div>
+    </div>
+    <div class="container report"></div>
+</div>
  
-<script src="/js/sign.js"></script>
+<script src="./js/sign.js"></script>
 </body>
 </html>
